src/main/java/com/example/gominbreakbackend/global/error/GlobalExceptionHandler.java
package com.example.gominbreakbackend.global.error;public class GlobalExceptionHandler {
}
